--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
-PROJECT(GraphMining)
+PROJECT(GraphPi)
 INCLUDE_DIRECTORIES(include)
 #SET(CMAKE_C_COMPILER "/opt/gcc-7.3.0/bin/gcc")
 SET(CMAKE_BUILD_TYPE RELEASE)
